test/files/neg/t5882.check
t5882.scala:4: error: implementation restriction: nested class is not allowed in value class
This restriction is planned to be removed in subsequent releases.
  case class Scope()
             ^
t5882.scala:5: error: implementation restriction: nested object is not allowed in value class
This restriction is planned to be removed in subsequent releases.
  object Bar
         ^
two errors found
